--- a/NetPulse/privacy_policy.html
+++ b/NetPulse/privacy_policy.html
@@ -23,13 +23,8 @@
             box-shadow: 0 2px 8px rgba(0,0,0,0.05);
         }
 
-        h1 {
-            margin-top: 0;
-        }
-
-        h2 {
-            margin-top: 28px;
-        }
+        h1 { margin-top: 0; }
+        h2 { margin-top: 28px; }
 
         .last-updated {
             color: #666;
@@ -37,13 +32,8 @@
             margin-bottom: 20px;
         }
 
-        ul {
-            padding-left: 20px;
-        }
-
-        li {
-            margin-bottom: 6px;
-        }
+        ul { padding-left: 20px; }
+        li { margin-bottom: 6px; }
 
         .contact {
             background: #f5f5f5;
@@ -57,9 +47,7 @@
             text-decoration: none;
         }
 
-        a:hover {
-            text-decoration: underline;
-        }
+        a:hover { text-decoration: underline; }
     </style>
 </head>
 
@@ -69,22 +57,23 @@
     <h1>Privacy Policy</h1>
 
     <div class="last-updated">
-        Last Updated: November 3, 2025
+        Last Updated: February 12, 2026
     </div>
 
     <h2>1. Information We Collect</h2>
     <p>
         NetPulse monitors your device's network connectivity status to provide real-time alerts about network type changes.
-        We collect:
+        We collect and process the following information locally on your device:
     </p>
     <ul>
         <li>Network type information (Wi-Fi, 5G, 4G, 3G, etc.)</li>
         <li>Signal strength levels</li>
-        <li>Network carrier name (optional - can be hidden via privacy settings)</li>
+        <li>Network carrier name</li>
         <li>Network transition timestamps</li>
     </ul>
     <p>
-        All data is processed locally on your device. We do NOT collect, transmit, or store any personal information on external servers.
+        This data is processed locally on your device.
+        We do NOT collect personal information such as name, contacts, messages, photos, or files.
     </p>
 
     <h2>2. How We Use Your Information</h2>
@@ -96,7 +85,7 @@
         <li>Export network data logs (if you choose to)</li>
     </ul>
     <p>
-        No data is shared with third parties or transmitted to external servers.
+        No personal data is shared with third parties.
     </p>
 
     <h2>3. Data Storage</h2>
@@ -117,7 +106,7 @@
         <li>Alert Customization – Choose which network transitions trigger alerts</li>
     </ul>
     <p>
-        These settings are stored locally and never transmitted.
+        These settings are stored locally and never transmitted externally.
     </p>
 
     <h2>5. Permissions</h2>
@@ -134,8 +123,28 @@
 
     <h2>6. Third-Party Services</h2>
     <p>
-        NetPulse does not integrate with any third-party analytics, advertising, or tracking services.
-        Your network monitoring data remains completely private.
+        NetPulse uses Firebase Crashlytics to help identify and fix app crashes and improve app stability.
+    </p>
+    <p>Crashlytics may collect the following technical diagnostic information:</p>
+    <ul>
+        <li>Crash logs (stack traces)</li>
+        <li>Device model</li>
+        <li>Operating system version</li>
+        <li>App version</li>
+        <li>General diagnostic information</li>
+    </ul>
+    <p>
+        This information is used only for debugging and improving app reliability.
+        It does NOT include personal content such as contacts, messages, photos, or files.
+    </p>
+    <p>
+        Learn more about Firebase privacy practices:
+        <a href="https://firebase.google.com/support/privacy" target="_blank">
+            Firebase Privacy and Security
+        </a>
+    </p>
+    <p>
+        Apart from crash reporting, NetPulse does not use third-party analytics, advertising, or tracking services.
     </p>
 
     <h2>7. Children's Privacy</h2>
