--- a/NetPulse/privacy_policy.html
+++ b/NetPulse/privacy_policy.html
@@ -9,25 +9,75 @@
             font-family: Arial, Helvetica, sans-serif;
             margin: 0;
             padding: 20px;
+            line-height: 1.6;
+            transition: background-color 0.3s, color 0.3s;
+        }
+
+        /* Light mode (default) */
+        body.light-mode {
             background-color: #fafafa;
             color: #1c1c1c;
-            line-height: 1.6;
+        }
+
+        body.light-mode .container {
+            background: #ffffff;
+            box-shadow: 0 2px 8px rgba(0,0,0,0.05);
+        }
+
+        body.light-mode h2 {
+            color: #1976d2;
+        }
+
+        body.light-mode .last-updated {
+            color: #666;
+        }
+
+        body.light-mode .contact {
+            background: #f5f5f5;
+        }
+
+        body.light-mode a {
+            color: #1976d2;
+        }
+
+        /* Dark mode */
+        body.dark-mode {
+            background-color: #121212;
+            color: #e0e0e0;
+        }
+
+        body.dark-mode .container {
+            background: #1e1e1e;
+            box-shadow: 0 2px 8px rgba(0,0,0,0.3);
+        }
+
+        body.dark-mode h2 {
+            color: #90caf9;
+        }
+
+        body.dark-mode .last-updated {
+            color: #9e9e9e;
+        }
+
+        body.dark-mode .contact {
+            background: #2c2c2c;
+        }
+
+        body.dark-mode a {
+            color: #90caf9;
         }
 
         .container {
             max-width: 900px;
             margin: auto;
-            background: #ffffff;
             padding: 24px;
             border-radius: 12px;
-            box-shadow: 0 2px 8px rgba(0,0,0,0.05);
         }
 
         h1 { margin-top: 0; }
         h2 { margin-top: 28px; }
 
         .last-updated {
-            color: #666;
             font-size: 14px;
             margin-bottom: 20px;
         }
@@ -36,19 +86,28 @@
         li { margin-bottom: 6px; }
 
         .contact {
-            background: #f5f5f5;
             padding: 14px;
             border-radius: 8px;
             margin-top: 10px;
         }
 
         a {
-            color: #1976d2;
             text-decoration: none;
         }
 
         a:hover { text-decoration: underline; }
     </style>
+    <script>
+        // Get theme from URL parameter (dark or light)
+        function initTheme() {
+            const params = new URLSearchParams(window.location.search);
+            const theme = params.get('theme') || 'light';
+            document.body.classList.add(theme + '-mode');
+        }
+
+        // Initialize theme on page load
+        document.addEventListener('DOMContentLoaded', initTheme);
+    </script>
 </head>
 
 <body>
@@ -57,7 +116,7 @@
     <h1>Privacy Policy</h1>
 
     <div class="last-updated">
-        Last Updated: February 12, 2026
+        Last Updated: February 15, 2026
     </div>
 
     <h2>1. Information We Collect</h2>
