--- a/NetPulse/terms_and_conditions.html
+++ b/NetPulse/terms_and_conditions.html
@@ -9,28 +9,85 @@
             font-family: Arial, Helvetica, sans-serif;
             margin: 0;
             padding: 20px;
+            line-height: 1.6;
+            transition: background-color 0.3s, color 0.3s;
+        }
+
+        /* Light mode (default) */
+        body.light-mode {
             background-color: #fafafa;
             color: #1c1c1c;
-            line-height: 1.6;
+        }
+
+        body.light-mode .container {
+            background: #ffffff;
+            box-shadow: 0 2px 8px rgba(0,0,0,0.05);
+        }
+
+        body.light-mode h2 {
+            color: #1976d2;
+        }
+
+        body.light-mode .last-updated {
+            color: #666;
+        }
+
+        body.light-mode .contact {
+            background: #f5f5f5;
+        }
+
+        body.light-mode .disclaimer {
+            background: #fff3e0;
+            border-left: 4px solid #ff9800;
+        }
+
+        body.light-mode a {
+            color: #1976d2;
+        }
+
+        /* Dark mode */
+        body.dark-mode {
+            background-color: #121212;
+            color: #e0e0e0;
+        }
+
+        body.dark-mode .container {
+            background: #1e1e1e;
+            box-shadow: 0 2px 8px rgba(0,0,0,0.3);
+        }
+
+        body.dark-mode h2 {
+            color: #90caf9;
+        }
+
+        body.dark-mode .last-updated {
+            color: #9e9e9e;
+        }
+
+        body.dark-mode .contact {
+            background: #2c2c2c;
+        }
+
+        body.dark-mode .disclaimer {
+            background: #332800;
+            border-left: 4px solid #ffa726;
+        }
+
+        body.dark-mode a {
+            color: #90caf9;
         }
 
         .container {
             max-width: 900px;
             margin: auto;
-            background: #ffffff;
             padding: 24px;
             border-radius: 12px;
-            box-shadow: 0 2px 8px rgba(0,0,0,0.05);
         }
 
         h1 { margin-top: 0; }
-        h2 {
-            margin-top: 28px;
-            color: #1976d2;
-        }
+        h2 { margin-top: 28px; }
 
         .last-updated {
-            color: #666;
             font-size: 14px;
             margin-bottom: 20px;
         }
@@ -39,14 +96,12 @@
         li { margin-bottom: 6px; }
 
         .contact {
-            background: #f5f5f5;
             padding: 14px;
             border-radius: 8px;
             margin-top: 10px;
         }
 
         a {
-            color: #1976d2;
             text-decoration: none;
         }
 
@@ -57,12 +112,21 @@
         }
 
         .disclaimer {
-            background: #fff3e0;
-            border-left: 4px solid #ff9800;
             padding: 12px;
             margin: 16px 0;
         }
     </style>
+    <script>
+        // Get theme from URL parameter (dark or light)
+        function initTheme() {
+            const params = new URLSearchParams(window.location.search);
+            const theme = params.get('theme') || 'light';
+            document.body.classList.add(theme + '-mode');
+        }
+
+        // Initialize theme on page load
+        document.addEventListener('DOMContentLoaded', initTheme);
+    </script>
 </head>
 
 <body>
