--- a/NetPulse/privacy_policy.html
+++ b/NetPulse/privacy_policy.html
@@ -6,11 +6,12 @@
     <title>NetPulse Privacy Policy</title>
     <style>
         body {
-            font-family: Arial, Helvetica, sans-serif;
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Arial, sans-serif;
             margin: 0;
-            padding: 20px;
-            line-height: 1.6;
+            padding: 16px;
+            line-height: 1.5;
             transition: background-color 0.3s, color 0.3s;
+            font-size: 14px;
         }
 
         /* Light mode (default) */
@@ -21,7 +22,7 @@
 
         body.light-mode .container {
             background: #ffffff;
-            box-shadow: 0 2px 8px rgba(0,0,0,0.05);
+            box-shadow: 0 1px 3px rgba(0,0,0,0.05);
         }
 
         body.light-mode h2 {
@@ -48,7 +49,7 @@
 
         body.dark-mode .container {
             background: #1e1e1e;
-            box-shadow: 0 2px 8px rgba(0,0,0,0.3);
+            box-shadow: 0 1px 3px rgba(0,0,0,0.3);
         }
 
         body.dark-mode h2 {
@@ -70,25 +71,46 @@
         .container {
             max-width: 900px;
             margin: auto;
-            padding: 24px;
-            border-radius: 12px;
+            padding: 16px;
+            border-radius: 8px;
         }
 
-        h1 { margin-top: 0; }
-        h2 { margin-top: 28px; }
+        h1 {
+            margin-top: 0;
+            font-size: 22px;
+            font-weight: 600;
+        }
+
+        h2 {
+            margin-top: 20px;
+            margin-bottom: 8px;
+            font-size: 16px;
+            font-weight: 600;
+        }
+
+        p {
+            margin: 8px 0;
+        }
 
         .last-updated {
-            font-size: 14px;
-            margin-bottom: 20px;
+            font-size: 12px;
+            margin-bottom: 16px;
         }
 
-        ul { padding-left: 20px; }
-        li { margin-bottom: 6px; }
+        ul {
+            padding-left: 20px;
+            margin: 8px 0;
+        }
+
+        li {
+            margin-bottom: 4px;
+            font-size: 14px;
+        }
 
         .contact {
-            padding: 14px;
-            border-radius: 8px;
-            margin-top: 10px;
+            padding: 12px;
+            border-radius: 6px;
+            margin-top: 8px;
         }
 
         a {
